<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/storeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_store"
            app:layout_constraintTop_toTopOf="@id/totalBill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/totalBill"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/totalBill"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:hint="@string/totalBill"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/storeIcon"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/totalBillEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/serviceIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_service"
            app:layout_constraintTop_toTopOf="@id/serviceQuestion"
            app:layout_constraintBottom_toBottomOf="@id/serviceQuestion"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/serviceQuestion"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/serviceQuestion"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/serviceIcon"
            app:layout_constraintTop_toBottomOf="@id/totalBill" />

        <RadioGroup
            android:id="@+id/tipOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/thirtyPercent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/serviceQuestion"
            app:layout_constraintTop_toBottomOf="@id/serviceQuestion">

            <RadioButton
                android:id="@+id/thirtyPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirtyPercent" />

            <RadioButton
                android:id="@+id/twentyFivePercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twentyFivePercent" />

            <RadioButton
                android:id="@+id/twentyPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twentyPercent" />

            <RadioButton
                android:id="@+id/eighteenPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eighteenPercent" />

            <RadioButton
                android:id="@+id/fifteenPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifteenPercent" />

        </RadioGroup>

        <ImageView
            android:id="@+id/roundUpIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/ic_round_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/roundUp"
            app:layout_constraintBottom_toBottomOf="@id/roundUp"
            />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/roundUp"
            style="@style/Widget.TipTime.CompoundButton.Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/roundUp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/roundUpIcon"
            app:layout_constraintStart_toStartOf="@id/tipOptions"
            app:layout_constraintTop_toBottomOf="@+id/tipOptions"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/roundUp"
            app:layout_constraintTop_toBottomOf="@id/roundUp" />

        <TextView
            android:id="@+id/tipResult"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateButton"
            tools:text="@string/tipResult" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>